--- a/package.json
+++ b/package.json
@@ -42,5 +42,8 @@
     "postcss": "^8.4.29",
     "tailwindcss": "^3.3.3",
     "typescript": "^5.2.2"
+  },
+  "volta": {
+    "node": "18.19.0"
   }
 }
